--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "source-map-support": "^0.5.4"
   },
   "devDependencies": {
+    "css-loader": "^0.28.11",
     "electron": "1.8.4",
     "electron-builder": "^20.8.1",
     "electron-webpack": "^2.0.1",
-    "webpack": "^4.4.1"
-  },
-  "resolutions": {
-    "webpack-sources": "1.0.1"
+    "electron-webpack-ts": "^2.0.0",
+    "electron-webpack-vue": "^2.1.0",
+    "tslint": "^5.9.1",
+    "tslint-config-airbnb": "^5.8.0",
+    "typescript": "^2.8.1",
+    "vue": "^2.5.16",
+    "vue-property-decorator": "^6.0.0",
+    "webpack": "^4.5.0"
   }
 }
